# EKF-SLAM-for-RAPOSA-NG

./: README.md  optimalmarkers explanation.txt  rosbag record.txt
Results/Synthetic-data/: low noise fake_world sims.txt
aruco_ros/aruco_ros/launch/: marker_publisher.launch  marker_publisher_1.launch
endekf/: CMakeLists.txt  package.xml  setup.py
endekf/ros/doc/: README.md
endekf/ros/launch/: endekf.launch
endekf/ros/scripts/: endekf_node
endekf/ros/src/endekf_ros/: endekf_node.py
fake_world/: CMakeLists.txt  package.xml  setup.py
fake_world/ros/doc/: README.md
fake_world/ros/launch/: fake_world.launch
fake_world/ros/scripts/: fake_world_node  observations_function.py  plotresults.py  worldcreator.py
fake_world/ros/src/fake_world_ros/: fake_world_node.py  observations_function.py
fiducials/aruco_detect/launch/: detection_from_rosbag.launch  detection_from_rosbag1.launch
fiducials/aruco_detect/scripts/: newmarkers
slamraposa/: CMakeLists.txt  package.xml  setup.py
slamraposa/ros/doc/: README.md
slamraposa/ros/launch/: slamraposa.launch
slamraposa/ros/scripts/: EKF_SLAM.py  EKFstopper.py  display.py  error_study.py  kill_function.py  observations_function.py  observations_function_new.py  odometry_function.py  plotresults.py  showslam.py  slamraposa_node  slamraposa_node1111.py
slamraposa/ros/src/slamraposa_ros/: slamraposa_node.py
